@@ -58,7 +58,7 @@ $GLOBALS['TL_DCA']['tl_iso_products'] = array
 			'mode'					=> 5,
 			'fields'				=> array('name'),
 			'flag'					=> 1,
-			'panelLayout'			=> 'filter;sort,search,limit',
+			'panelLayout'			=> 'filter;sort,search',
 			'icon'					=> 'system/modules/isotope/html/store-open.png',
 			'paste_button_callback'	=> array('tl_iso_products', 'pasteProduct'),
 		),
@@ -240,7 +240,7 @@ $GLOBALS['TL_DCA']['tl_iso_products'] = array
 			'filter'				=> true,
 			'inputType'				=> 'select',
 			'options_callback'		=> array('tl_iso_products', 'getProductTypes'),
-			'foreignKey'			=> (strlen($this->Input->get('table')) ? 'tl_iso_producttypes.name' : ''),
+			'foreignKey'			=> (strlen($this->Input->get('table')) ? 'tl_iso_producttypes.name' : null),
 			'eval'					=> array('mandatory'=>true, 'submitOnChange'=>true),
 			'attributes'			=> array('legend'=>'general_legend', 'fixed'=>true, 'inherit'=>true),
 		),
