@@ -4,9 +4,13 @@ Isotope eCommerce Changelog
 
 Version 1.3.beta2 (2011-??-??)
 ------------------------------
+- Added: runonce script will automatically generate groups based on categories (pages)
 - Improved: Allow subclasses of ModuleIsotopeProductFilter for filter modules
 - Improved: Allow subclasses of ModuleIsotopeProductFilter to cache request
 - Improved: new function generateRequestUrl to remove GET-parameters from request string
+- Improved backend product list, no more "limit" option but can search & filter through all products and variants and translations (Ticket #495)
+- Fixed a bug in runonce script preventing the database file from being refreshed
+- Fixed a bug with Contao 2.10 and the new foreignKey implementation
 
 Version 1.3.beta1 (2011-07-18)
 ------------------------------
